fixed overflow issue when changing the size of the window

--- a/app/src/renderer/src/main.css
+++ b/app/src/renderer/src/main.css
@@ -12,9 +12,10 @@ body {
 #app {
     display: flex;
     flex-direction: column;
-    height: 100%;
-    width: 100%;
-    margin: 20px;
+    max-width: 100%;
+    max-height: 100%;
+    aspect-ratio: 0.575;
+    margin: 0 20px 0 20px;
 }
 
 
